--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.5",
     "@babel/node": "^7.18.5",
-    "@babel/preset-env": "^7.18.2"
+    "@babel/preset-env": "^7.18.2",
+    "@types/cors": "^2.8.12"
   },
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0"
   }
 }
