--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "helmet": "^5.1.0"
+    "express-rate-limit": "^6.4.0",
+    "helmet": "^5.1.0",
+    "morgan": "^1.10.0"
   }
 }
