--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@babel/core": "^7.18.5",
     "@babel/node": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
-    "@types/cors": "^2.8.12"
+    "@types/cors": "^2.8.12",
+    "@types/morgan": "^1.9.3",
+    "morgan": "^1.10.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -33,6 +35,6 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
     "helmet": "^5.1.0",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.4.0"
   }
 }
