--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.18.2",
     "@types/cors": "^2.8.12",
     "@types/morgan": "^1.9.3",
+    "jshint": "^2.13.4",
     "morgan": "^1.10.0"
   },
   "dependencies": {
@@ -35,6 +36,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
     "helmet": "^5.1.0",
+    "joi": "^17.6.0",
     "mongoose": "^6.4.0"
   }
 }
